[project]
name = "scrapingfish"
version = "0.1.0"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/swoutch/scrapingfish"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
